--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,11 @@ authors = ["Chris Holcombe <chris.holcombe@canonical.com>", "Chris MacNaughton <
 log = "*"
 simple_logger = "*"
 pcap = "*"
+clap = "*"
+yaml-rust = "*"
 rustc-serialize = "*"
 ceph = {git = "https://github.com/ChrisMacNaughton/ceph-rs.git"}
 hyper = "0.6.16"
-output_args = {git = "https://github.com/ChrisMacNaughton/ceph_cli_args.git"}
 regex = "*"
 
 [profile.release]
