--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ log = "*"
 simple_logger = "*"
 pcap = "*"
 rustc-serialize = "*"
-# ceph = {git = "https://github.com/ChrisMacNaughton/ceph-rs.git"}
-ceph = {path = "/home/chris/repos/ceph-rs"}
+ceph = {git = "https://github.com/ChrisMacNaughton/ceph-rs.git"}
 hyper = "0.6.16"
 output_args = {git = "https://github.com/ChrisMacNaughton/ceph_cli_args.git"}
 regex = "*"
