--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ addons:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
+      - libatasmart-dev
 language: rust
 rust:
   - nightly
