Add whitelisted atasmart4 not atasmart-dev

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
       - libcurl4-openssl-dev
       - libelf-dev
       - libdw-dev
-      - libatasmart-dev
+      - libatasmart4
 language: rust
 rust:
   - nightly
