update to support influx

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Chris Holcombe <chris.holcombe@canonical.com>", "Chris MacNaughton <chris.macnaughton@canonical.com>"]
 
 [dependencies]
+influent = "0.2"
 log = "*"
 simple_logger = "*"
 pcap = "*"
@@ -13,6 +14,10 @@ rustc-serialize = "*"
 ceph = {git = "https://github.com/ChrisMacNaughton/ceph-rs.git"}
 hyper = "0.6.16"
 regex = "*"
+serde = "*"
+serde_json = "*"
+serde_macros = "*"
+time = "*"
 
 [profile.release]
 opt-level = 3
