Use the new whitelisted libatasmart-dev package

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
-before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq libatasmart-dev libpcap-dev libcurl4-openssl-dev libelf-dev libdw-dev
+addons:
+  apt:
+    packages:
+      - libpcap-dev
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - libatasmart-dev
 language: rust
 rust:
   - nightly
@@ -24,4 +29,4 @@ script:
       travis-cargo test
 after_success:
   - travis-cargo coveralls --no-sudo
-sudo: required
+sudo: false
