--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ image: ubuntu:vivid
 
 before_script:
   - apt-get update
-  - apt-get install -y curl file build-essential libssl-dev
+  - apt-get install -y curl file build-essential libssl-dev libpcap-dev
 
 cache:
   untracked: true
