--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,20 @@
-image: ubuntu:trusty
-
-before_script:
-  - apt-get update
-  - apt-get install -y curl file build-essential libssl-dev libpcap-dev
+image: iceyec/ci-rust
 
 cache:
   untracked: true
-  key: "$CI_BUILD_NAME"
+  key: $CI_BUILD_STAGE/$CI_BUILD_REF_NAME
   paths:
     - $HOME/.cargo
     - $CI_PROJECT_DIR/target
+
+variables:
+  TRAVIS_CARGO_NIGHTLY_FEATURE: ""
 
 stages:
   - test
 
 test-nightly:
+  allow_failure: true
   script:
     - curl -sSf https://static.rust-lang.org/rustup.sh | sh -s -- -y --disable-sudo --channel=nightly
-    - cargo build --verbose
-    - cargo test --verbose
+    - travis-cargo build && travis-cargo test
