--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
 image: iceyec/ci-rust
 
+before_script:
+  - apt-get update
+  - apt-get install -y libpcap-dev
 cache:
   untracked: true
   key: $CI_BUILD_STAGE/$CI_BUILD_REF_NAME
